5.0/_sources/variabletools.rst.txt
.. |DefaultMask| replace:: :class:`~hydpy.core.masktools.DefaultMask`
.. |False| replace:: :const:`False`
.. |InputSequence| replace:: :class:`~hydpy.core.sequencetools.InputSequence`
.. |Masks| replace:: :class:`~hydpy.core.masktools.Masks`
.. |MixinFixedShape| replace:: :class:`~hydpy.core.variabletools.MixinFixedShape`
.. |ModelSequence| replace:: :class:`~hydpy.core.sequencetools.ModelSequence`
.. |Model| replace:: :class:`~hydpy.core.modeltools.Model`
.. |NodeSequence| replace:: :class:`~hydpy.core.sequencetools.NodeSequence`
.. |None| replace:: :const:`None`
.. |Options.reprcomments| replace:: :const:`~hydpy.core.optiontools.Options.reprcomments`
.. |Options.trimvariables| replace:: :const:`~hydpy.core.optiontools.Options.trimvariables`
.. |Parameters| replace:: :class:`~hydpy.core.parametertools.Parameters`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |RuntimeError| replace:: :class:`RuntimeError`
.. |Sequence_| replace:: :class:`~hydpy.core.sequencetools.Sequence_`
.. |Sequences| replace:: :class:`~hydpy.core.sequencetools.Sequences`
.. |SubParameters| replace:: :class:`~hydpy.core.parametertools.SubParameters`
.. |SubSequences| replace:: :class:`~hydpy.core.sequencetools.SubSequences`
.. |SubVariables| replace:: :class:`~hydpy.core.variabletools.SubVariables`
.. |Variable.INIT| replace:: :attr:`~hydpy.core.variabletools.Variable.INIT`
.. |Variable.availablemasks| replace:: :const:`~hydpy.core.variabletools.Variable.availablemasks`
.. |Variable.average_values| replace:: :func:`~hydpy.core.variabletools.Variable.average_values`
.. |Variable.commentrepr| replace:: :const:`~hydpy.core.variabletools.Variable.commentrepr`
.. |Variable.initinfo| replace:: :const:`~hydpy.core.variabletools.Variable.initinfo`
.. |Variable.mask| replace:: :func:`~hydpy.core.variabletools.Variable.mask`
.. |Variable.numberofvalues| replace:: :const:`~hydpy.core.variabletools.Variable.numberofvalues`
.. |Variable.refweights| replace:: :const:`~hydpy.core.variabletools.Variable.refweights`
.. |Variable.shape| replace:: :const:`~hydpy.core.variabletools.Variable.shape`
.. |Variable.values| replace:: :const:`~hydpy.core.variabletools.Variable.values`
.. |Variable.valuevector| replace:: :const:`~hydpy.core.variabletools.Variable.valuevector`
.. |Variable.value| replace:: :const:`~hydpy.core.variabletools.Variable.value`
.. |Variable.verify| replace:: :func:`~hydpy.core.variabletools.Variable.verify`
.. |Variable| replace:: :class:`~hydpy.core.variabletools.Variable`
.. |bool| replace:: :class:`bool`
.. |dict| replace:: :class:`dict`
.. |exch| replace:: :mod:`~hydpy.models.exch`
.. |float| replace:: :class:`float`
.. |get_tolerance| replace:: :func:`~hydpy.core.variabletools.get_tolerance`
.. |hland| replace:: :mod:`~hydpy.models.hland`
.. |id| replace:: :func:`id`
.. |int| replace:: :class:`int`
.. |len| replace:: :func:`len`
.. |lstream| replace:: :mod:`~hydpy.models.lstream`
.. |numpy| replace:: :mod:`~numpy`
.. |parametertools| replace:: :mod:`~hydpy.core.parametertools`
.. |sequencetools| replace:: :mod:`~hydpy.core.sequencetools`
.. |set| replace:: :class:`set`
.. |sort_variables| replace:: :func:`~hydpy.core.variabletools.sort_variables`
.. |to_repr| replace:: :func:`~hydpy.core.variabletools.to_repr`
.. |trim| replace:: :func:`~hydpy.core.variabletools.trim`
.. |tuple| replace:: :class:`tuple`
.. |exch_factors.WaterLevel| replace:: :class:`~hydpy.models.exch.exch_factors.WaterLevel`
.. |hland_sequences.State2DSequence.valuevector| replace:: :const:`~hydpy.models.hland.hland_sequences.State2DSequence.valuevector`
.. |hland_states.SP| replace:: :class:`~hydpy.models.hland.hland_states.SP`
.. |lstream_control.BV| replace:: :class:`~hydpy.models.lstream.lstream_control.BV`
.. |numpy.nan| replace:: :const:`~numpy.nan`
.. |sequencetools.InputSequences| replace:: :class:`~hydpy.core.sequencetools.InputSequences`

.. _variabletools:

variabletools
=============

.. automodule:: hydpy.core.variabletools
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, runtime_checkable
